# rockem_sockem_project

./: CMakeLists.txt  README.md  punchbag_blender.mtl
model/boxing_ring/meshes/: boxingring.mtl  punchbag_blender.mtl  stand.mtl
project/: CMakeLists.txt  bag_pos_noisy.cpp  controller.cpp  environment.urdf  punching_bag.urdf  simviz.cpp  simviz_broken.cpp  toro.urdf  world.urdf
project_code/: CMakeLists.txt  controller.cpp  simviz.cpp  world.urdf
