# - SAI2-PRIMITIVES
find_package(SAI2-PRIMITIVES REQUIRED)
include_directories(${SAI2-PRIMITIVES_INCLUDE_DIRS})
add_definitions(${SAI2-PRIMITIVES_DEFINITIONS})

# create an executable
set (CMAKE_RUNTIME_OUTPUT_DIRECTORY ${ROCKEM_SOCKEM_PROJECT_BINARY_DIR}/project)
ADD_EXECUTABLE (controller_rockem_sockem controller.cpp ${ROCKEM_SOCKEM_PROJECT_COMMON_SOURCE})
ADD_EXECUTABLE (simviz_rockem_sockem simviz.cpp ${ROCKEM_SOCKEM_PROJECT_COMMON_SOURCE})

# and link the library against the executable
TARGET_LINK_LIBRARIES (controller_rockem_sockem ${ROCKEM_SOCKEM_PROJECT_COMMON_LIBRARIES} ${SAI2-PRIMITIVES_LIBRARIES})
TARGET_LINK_LIBRARIES (simviz_rockem_sockem ${ROCKEM_SOCKEM_PROJECT_COMMON_LIBRARIES} ${SAI2-PRIMITIVES_LIBRARIES})

# export resources such as model files.
# NOTE: this requires an install build
SET(APP_RESOURCE_DIR ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/resources)
FILE(MAKE_DIRECTORY ${APP_RESOURCE_DIR})
FILE(COPY world.urdf DESTINATION ${APP_RESOURCE_DIR})
FILE(COPY toro.urdf DESTINATION ${APP_RESOURCE_DIR})
FILE(COPY punching_bag.urdf DESTINATION ${APP_RESOURCE_DIR})
